--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front end de app de dados da aneel",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node ./src/main.js"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.17"
+    "mongoose": "^5.9.17",
+    "node-tesseract-ocr": "^2.2.1",
+    "puppeteer": "^10.4.0",
+    "puppeteer-core": "^10.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.13"
   }
 }
